--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=JoshKiyakoo_SemienFGBC_#Members_Registration_&_Management_System_[MRMS]
 APP_ENV=local
 APP_KEY=base64:GW05iS6fS4gQ77XVtE0FW+XoOV2hJPOXO88TDnfqJ9k=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://mrms.semienfgbc.org.test
 
 LOG_CHANNEL=stack
